Update index.html pdf updated

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div>
             <h2>Available Downloads:</h2>
             <ul>
-                <li><a href="example_file_1.pdf" download>Example File 1 (PDF)</a></li>
-                <li><a href="example_file_2.zip" download>Example File 2 (ZIP)</a></li>
+                <li><a href="g.pdf" download>Example File 1 (PDF)</a></li>
+                
                 <!-- Add more files as needed -->
             </ul>
         </div>
