--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <h2>Available Downloads:</h2>
             <ul>
-                <li><a href="g.pdf" download>Example File 1 (PDF)</a></li>
+                <li><a href="g.pdf.pdf" download>Example File 1 (PDF)</a></li>
                 
                 <!-- Add more files as needed -->
             </ul>
